# claw-mail

./: LICENSE  README.md  pyproject.toml
skills/claw-mail/: ROADMAP.md
skills/claw-mail/scripts/: calendar_invite.py
skills/claw-mail/scripts/lib/: smtp_client.py
skills/claw-mail/tests/: test_remaining_features.py
tests/: test_account_manager.py  test_composer.py  test_imap_folders.py  test_models.py  test_new_features.py  test_processor.py  test_scripts.py
